frontend/src/assets/theme/styleoverrides.scss
#app {
   button.p-scrolltop {
      border: 2px solid white;
      &:focus {
         outline: 2px dashed white;
         outline-offset: 3px;
      }
   }
   button.p-button.checked {
      .p-button-icon {
         color: $uva-brand-blue-100;
      }
   }
   button.p-button {
      white-space: nowrap
   }
   button.p-button-link {
      margin: 0;
      padding: 2px 10px;
      &:hover {
         text-decoration: underline;
      }
   }
   a.p-button.p-component {
      &:hover {
         text-decoration: none;
      }
   }
   .p-menubar.p-component {
      border-bottom: 1px solid $uva-grey-100;
      a.p-menubar-item-link {
         white-space: nowrap;
         &:hover{
            color:white;
            text-decoration: none;
         }
      }
   }
}

div.p-fieldset-content {
   display: flex;
   flex-direction: column;
   gap: 10px;
}

div.p-select-overlay.p-component {
   background: white;
   padding: 0;
   border: 1px solid $uva-grey-100;
   border-radius: 0.3rem;
   .p-select-option.p-select-option-selected, .p-select-option.p-select-option-selected.focus {
      background: $uva-blue-alt-300;
      color: $uva-text-color-dark;
   }
}

.p-dialog-mask {
   .p-dialog {
      .p-dialog-header {
         background: $uva-teal-200;
         border-bottom: 1px solid $uva-teal-100;
         border-radius: 0.3rem 0.3rem 0 0;
      }
   }
}

